fix close modal styling - was off center

--- a/client/src/components/RecipeModal.css
+++ b/client/src/components/RecipeModal.css
@@ -44,6 +44,10 @@
         align-content: center;
     }
 
+    .close-icon {
+        height: 100%;
+    }
+
     .button-square {
         height: 40px;
     }
